<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

  <Button
      android:id="@+id/location_background"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/go_to_fetch_location_in_fore_ground"
      android:textColor="@color/color_primary_dark"
      />

  <Button
      android:id="@+id/location_foreground"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/go_to_fetch_location_in_back_ground"
      android:textColor="@color/color_primary_dark"
      />

  <Button
      android:id="@+id/geo_fencing_activity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/go_to_geo_fencing"
      android:textColor="@color/color_primary_dark"
      />

</LinearLayout>