<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reeuse.location.GeoFencingActivity"
    >

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_latitude"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <EditText
        android:id="@+id/et_latitude_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:singleLine="true"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_longitude"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <EditText
        android:id="@+id/et_longitude_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:singleLine="true"
        />

  </android.support.design.widget.TextInputLayout>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/default_radius_is_set_as_100_meter_for_geo_fencing"
      />

  <Button
      android:id="@+id/bt_set_geo_fence"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/set_geo_fence"
      android:textStyle="bold"
      style="?android:textAppearanceSmall"
      />

</LinearLayout>
